--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+    
     body{
-      background-color:red;
-      color: #E80C7A;
+      color: #212121;
       font-family: sans-serif;
+    }
+    
+    nav a {
+        text-decoration: none;
+        color: #F5F5F5;
+        background-color: #9E9E9E;
     }
     
     h2{
