--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
         text-decoration: none;
         color: #F5F5F5;
         background-color: #9E9E9E;
+        border-radius: 2px;
+        
     }
     
     h2{
