--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
         color: #F5F5F5;
         background-color: #9E9E9E;
         border-radius: 2px;
+        margin: 5px;
+        padding: 5px;
         
     }
     
