--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
       nav a:hover{
         background-color: #727272;  
       }
+    
+    header {
+        text-align: center;
+    }
       
     header img{
         border-radius: 50%;
