--- a/style.css
+++ b/style.css
@@ -35,3 +35,9 @@
     h2{
       color: #1FCCB2;
     }
+    
+    section{
+        background-image: url(https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/103.jpg);
+    }
+    
+    
