--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@
     }
     
     section{
+        text-align: center;
         background-image: url(https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/103.jpg);
+        height: 400px;
     }
     
     
