--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
         text-align: center;
         background-image: url(https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/103.jpg);
         height: 400px;
+        background-size: cover;
     }
     
     
