--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@
         height: 400px;
         background-size: cover;
     }
+
+#features{
+  background-color: blue;
+  height: 250px;
+}
     
     button{
         color: #FFF;
