--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 
 #features{
   background-image: none;
-  background-color: blue;
+  background-color: rgba(43, 43, 57, 1);
   height: 250px;
 }
     
