--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p {
   color: #FFF;
   background-color:#E0E066;
   font-family: Impact, Haettenschweiler, “Arial Narrow Bold”, sans-serif; 
+  margin: 0;
 }
     
     button{
