--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ p {
   background-color:#E0E066;
   font-family: Impact, Haettenschweiler, “Arial Narrow Bold”, sans-serif; 
   margin: 0;
+  padding: 20px;
 }
     
     button{
