--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
   font-family: Impact, Haettenschweiler, “Arial Narrow Bold”, sans-serif; 
   margin: 0;
   padding: 20px;
+  width: 200px;
 }
     
     button{
