--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@ p {
   color: #FFF;
   background-color:#E0E066;
   font-family: Impact, Haettenschweiler, “Arial Narrow Bold”, sans-serif; 
-  margin: 0;
+  margin: 15px;
   padding: 20px;
   width: 200px;
+  display: inline-block;
 }
     
     button{
