--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@
     section{
         text-align: center;
         background-image: url(https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/103.jpg);
-        
-        height: 200px;
+        background-position: 0px 603px;
+        height: 300px;
         background-size: cover;
     }
 
