--- a/style.css
+++ b/style.css
@@ -82,4 +82,6 @@ p:hover{
         height: 150px;
         text-align: center;
         background-color: #727272;
+        padding: 50px;
+        box-sizing: border-box;
     }
