--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
       margin: 0;
     }
     
+    a{
+            text-decoration: none;  
+    }
+    
     nav a {
-        text-decoration: none;
         color: #F5F5F5;
         background-color: #9E9E9E;
         border-radius: 2px;
